完成博客列表功能

--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -3,14 +3,14 @@
 <head th:replace="admin/_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>博客管理</title>
+    <title>标签管理</title>
     <link href="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
     <link href="../../static/css/me.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- 导航栏 -->
-    <nav th:replace="admin/_fragments :: menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="admin/_fragments :: menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui teal header item">Blog</h2>
@@ -40,8 +40,8 @@
     <div class="ui attached pointing menu">
         <div class="ui container">
             <div class="right menu">
-                <a href="#" class="item">发布</a>
-                <a href="#" class="teal active item">列表</a>
+                <a href="#" th:href="@{/admin/types/input}" class="item">发布</a>
+                <a href="#" th:href="@{/admin/types}" class="active teal item">列表</a>
             </div>
         </div>
     </div>
@@ -49,75 +49,42 @@
     <!-- 中间内容 -->
     <div class="m-padded-tb-big m-container-small">
         <div class="ui container">
-            <div class="ui segment secondary form">
-                <input type="hidden" name="page">
-                <div class="inline fields">
-                    <div class="field">
-                        <input type="text" name="title" placeholder="标题">
-                    </div>
-                    <div class="field">
-                        <div class="ui selection dropdown">
-                            <input type="hidden" name="typeId">
-                            <i class="dropdown icon"></i>
-                            <div class="default text">分类</div>
-                            <div class="menu">
-                                <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}">错误日志</div>
-                                <!--/*-->
-                                <div class="item" data-value="2">开发者日志</div>
-                                <!--*/-->
-                            </div>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <div class="ui checkbox">
-                            <input type="checkbox" id="recommend" name="recommend">
-                            <label for="recommend">推荐</label>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <button type="button" id="search-btn" class="ui teal basic mini button"><i class="icon search"></i>搜索</button>
-                    </div>
-                </div>
+            <div class="ui success message" th:unless="${#strings.isEmpty(message)}">
+                <i class="close icon"></i>
+                <div class="header">提示：</div>
+                <p th:text="${message}">恭喜，操作成功！</p>
             </div>
 
-            <div id="table-container">
-                <table class="ui compact teal table" th:fragment="blogList">
-                    <thead>
+            <table class="ui celled table">
+                <thead>
                     <tr>
                         <th></th>
-                        <th>标题</th>
-                        <th>类型</th>
-                        <th>推荐</th>
-                        <th>更新时间</th>
+                        <th>名称</th>
                         <th>操作</th>
                     </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="blog,iterStat : ${page.content}">
+                </thead>
+                <tbody>
+                    <tr th:each="type,iterStat : ${page.content}">
                         <td th:text="${iterStat.count}">1</td>
-                        <td th:text="${blog.title}">刻意练习清单</td>
-                        <td th:text="${blog.type.name}">认知升级</td>
-                        <td th:text="${blog.recommend} ? '是' : '否'">是</td>
-                        <td th:text="${blog.updateTime}">2019-03-20 09：45</td>
+                        <td th:text="${type.name}">刻意练习清单</td>
                         <td>
-                            <a href="#" th:href="@{/admin/blogs/{id}/input(id=${blog.id})}" class="ui mini teal basic button">编辑</a>
-                            <a href="#" th:href="@{/admin/blogs/{id}/delete(id=${blog.id})}" class="ui mini red basic button">删除</a>
+                            <a href="#" th:href="@{/admin/types/{id}/input(id=${type.id})}" class="ui mini teal basic button">编辑</a>
+                            <a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id})}" class="ui mini red basic button">删除</a>
                         </td>
                     </tr>
-                    </tbody>
-                    <tfoot>
+                </tbody>
+                <tfoot>
                     <tr>
-                        <th colspan="6">
-                            <div class="ui pagination mini menu" th:if="${page.totalPages} > 1">
-                                <a onclick="page(this)" th:attr="data-page=${page.number}-1" class="  item" th:unless="${page.first}">上一页</a>
-                                <a onclick="page(this)" th:attr="data-page=${page.number}+1" class=" item" th:unless="${page.last}">下一页</a>
+                        <th colspan="6" >
+                            <div class="ui pagination mini menu" th:if="${page.totalPages}>1">
+                                <a th:href="@{/admin/types(page=${page.number}-1)}" class="item" th:unless="${page.first}">上一页</a>
+                                <a th:href="@{/admin/types(page=${page.number}+1)}" href="#" class="item" th:unless="${page.last}">下一页</a>
                             </div>
-                            <a href="#" class="ui mini teal basic right floated button">新增</a>
+                            <a href="#" th:href="@{/admin/types/input}" class="ui mini teal basic right floated button">新增</a>
                         </th>
                     </tr>
-                    </tfoot>
-                </table>
-            </div>
+                </tfoot>
+            </table>
         </div>
     </div>
 
@@ -173,24 +140,9 @@
     $('.ui.dropdown').dropdown({
         on: 'hover'
     });
-    
-    function page(obj) {
-        $("[name='page']").val($(obj).data("page"));
-        loaddata();
-    }
 
-    function loaddata(){
-        $("#table-container").load(/*[[@{/admin/blogs/search}]]*/"/admin/blogs/search", {
-            title: $("[name='title']").val(),
-            typeId: $("[name='typeId']").val(),
-            recommend: $("[name='recommend']").prop('checked'),
-            page: $("[name='page']").val()
-        })
-    }
-
-    $("#search-btn").click(function () {
-        loaddata();
-    });
-
+    $('.message.close').on('click', function () {
+        $(this).closest('.message').transition('fade');
+    })
 </script>
 </html>
