--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -109,9 +109,9 @@
                 </div>
             </div>
 
-<!--            <div class="required field">-->
-<!--                <textarea name="description" placeholder="博客描述..." maxlength="200"></textarea>-->
-<!--            </div>-->
+            <div class="required field">
+                <textarea name="description" placeholder="博客描述..." maxlength="200" th:text="*{description}"></textarea>
+            </div>
 
             <div class="inline fields">
                 <div class="field">
@@ -262,14 +262,14 @@
                     type : 'empty',
                     prompt: '标题：请输入博客首图'
                 }]
+            },
+            description : {
+                identifier: 'description',
+                rules: [{
+                    type : 'empty',
+                    prompt: '标题：请输入博客描述'
+                }]
             }
-            // description : {
-            //     identifier: 'description',
-            //     rules: [{
-            //         type : 'empty',
-            //         prompt: '标题：请输入博客描述'
-            //     }]
-            // }
         }
     });
 
