--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,13 +46,48 @@
                                 <h3 class="ui header teal">博客</h3>
                             </div>
                             <div class="right aligned column">
-                                共 <h2 class="ui orange header m-inline-block m-text-thin">14</h2> 篇
+                                共 <h2 class="ui orange header m-inline-block m-text-thin" th:text="${page.totalElements}">14</h2> 篇
                             </div>
                         </div>
                     </div>
 
                     <!--content-->
                     <div class="ui attached segment">
+                        <div class="ui padded vertical segment m-padded-tb-large" th:each="blog : ${page.content}">
+                            <div class="ui middle aligned mobile reversed stackable grid">
+                                <div class="eleven wide column">
+                                    <h3 class="ui header"><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗?</a></h3>
+                                    <p class="m-text" th:text="|${blog.description}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                                    <div class="ui grid">
+                                        <div class="eleven wide column">
+                                            <div class="ui horizontal link list mini">
+                                                <div class="item">
+                                                    <img src="https://unsplash.it/100/100?image=1005" th:src="@{${blog.user.avatar}}" alt="" class="ui avatar image">
+                                                    <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}">XGC</a></div>
+                                                </div>
+                                                <div class="item">
+                                                    <i class="icon calendar"></i><span th:text="${#dates.format(blog.updateTime, 'yyyy-MM-dd')}">2020/3/29</span>
+                                                </div>
+                                                <div class="item">
+                                                    <i class="icon eye"></i><sapn th:text="${blog.views}">2342</sapn>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="five wide column right aligned">
+                                            <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.type.name}">认知升级</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="five wide column">
+                                    <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
+                                        <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.firstPicture}}" alt="" class="ui rounded image">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--/*-->
                         <div class="ui padded vertical segment m-padded-tb-large" >
                             <div class="ui mobile reversed stackable grid">
                                 <div class="eleven wide column">
@@ -284,49 +319,17 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="ui padded vertical segment m-padded-tb-large" >
-                            <div class="ui mobile reversed stackable grid">
-                                <div class="eleven wide column">
-                                    <h3 class="ui header">你真的理解什么是财富自由吗?</h3>
-                                    <p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
-                                    <div class="ui grid">
-                                        <div class="eleven wide column">
-                                            <div class="ui horizontal link list mini">
-                                                <div class="item">
-                                                    <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                                                    <div class="content"><a href="#" class="header">XGC</a></div>
-                                                </div>
-                                                <div class="item">
-                                                    <i class="icon calendar"></i> 2020/3/29
-                                                </div>
-                                                <div class="item">
-                                                    <i class="icon eye"></i> 2342
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="five wide column right aligned">
-                                            <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="five wide column">
-                                    <a href="#" target="_blank">
-                                        <img src="https://unsplash.it/800/450?image=1005" alt="" class="ui rounded image">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                        <!--*/-->
                     </div>
 
                     <!--footer-->
                     <div class="ui bottom attached segment">
-                        <div class="ui middle aligned two column grid">
+                        <div class="ui middle aligned two column grid" th:if="${page.totalPages}>1">
                             <div class="column">
-                                <a href="#" class="ui button teal basic mini">上一页</a>
+                                <a href="#" class="ui button teal basic mini" th:href="@{/(page=${page.number}-1}" th:unless="${page.first}">上一页</a>
                             </div>
                             <div class="right aligned column">
-                                <a href="#" class="ui button teal basic mini">下一页</a>
+                                <a href="#" class="ui button teal basic mini" th:href="@{/(page=${page.number}+1}" th:unless="${page.last}">下一页</a>
                             </div>
                         </div>
                     </div>
@@ -347,10 +350,12 @@
                         </div>
                         <div class="ui segment">
                             <div class="ui fluid vertical menu">
-                                <a href="#" class="item">
-                                    学习日志
-                                    <div class="ui teal basic left pointing label">13</div>
+                                <a href="#" class="item" th:each="type : ${types}">
+                                    <span th:text="${type.name}">学习日志</span>
+                                    <div class="ui teal basic left pointing label" th:text="${#arrays.length(type.blogs)}">13</div>
                                 </a>
+
+                                <!--/*-->
                                 <a href="#" class="item">
                                     思考与感悟
                                     <div class="ui teal basic left pointing label">13</div>
@@ -371,6 +376,7 @@
                                     学习日志
                                     <div class="ui teal basic left pointing label">13</div>
                                 </a>
+                                <!--*/-->
                             </div>
                         </div>
                     </div>
@@ -388,6 +394,12 @@
                             </div>
                         </div>
                         <div class="ui segment">
+                            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny" th:each="tag : ${tags}">
+                                <span th:text="${tag.name}">方法论</span>
+                                <div class="detail" th:text="${#arrays.length(tag.blogs)}">23</div>
+                            </a>
+
+                            <!--/*-->
                             <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
                                 方法论
                                 <div class="detail">23</div>
@@ -424,10 +436,8 @@
                                 方法论
                                 <div class="detail">23</div>
                             </a>
-                            <a href="#" target="_blank" class="ui teal basic left pointing label m-margin-tb-tiny">
-                                方法论
-                                <div class="detail">23</div>
-                            </a>
+                            <!--*/-->
+
                         </div>
                     </div>
 
@@ -438,6 +448,11 @@
                                 <i class="bookmark icon"></i> 最新推荐
                             </div>
                         </div>
+                        <div class="segment ui" th:each="blog : ${recommendBlogs}">
+                            <a href="#"  th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black m-text-thin" th:text="${blog.title}">用户故事（User Story）</a>
+                        </div>
+
+                        <!--/*-->
                         <div class="segment ui">
                             <a href="#" target="_blank" class="m-black m-text-thin">用户故事（User Story）</a>
                         </div>
@@ -459,9 +474,7 @@
                         <div class="segment ui">
                             <a href="#" target="_blank" class="m-black m-text-thin">用户故事（User Story）</a>
                         </div>
-                        <div class="segment ui">
-                            <a href="#" target="_blank" class="m-black m-text-thin">用户故事（User Story）</a>
-                        </div>
+                        <!--*/-->
                     </div>
 
 
