--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="_fragments :: head(~{::title})">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>分类</title>
@@ -10,7 +10,7 @@
 
 <body>
     <!-- 导航栏 -->
-    <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+    <nav th:replace="_fragments :: menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
         <div class="ui container">
             <div class="ui inverted secondary stackable menu">
                 <h2 class="ui teal header item">Blog</h2>
@@ -42,246 +42,63 @@
                         <h3 class="ui header teal">分类</h3>
                     </div>
                     <div class="right aligned column">
-                        共 <h2 class="ui orange header m-inline-block m-text-thin">14</h2> 篇
+                        共 <h2 class="ui orange header m-inline-block m-text-thin" th:text="${#arrays.length(types)}">14</h2> 篇
                     </div>
                 </div>
             </div>
 
             <div class="ui attached segment m-padded-tb-large">
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">思想与感悟</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">开发者手册</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">开发者手册</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">开发者手册</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">开发者手册</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">开发者手册</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">清单</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">清单</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">清单</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">清单</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">清单</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">清单</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">清单</a>
-                    <div class="ui basic teal left pointing label">24</div>
-                </div>
-                <div class="ui labeled button m-margin-tb-tiny">
-                    <a href="#" class="ui basic teal button">清单</a>
-                    <div class="ui basic teal left pointing label">24</div>
+                <div class="ui labeled button m-margin-tb-tiny" th:each="type : ${types}">
+                    <a href="#" class="ui basic button" th:classappend="${type.id == activeTypeId} ? 'teal'" th:href="@{/types/{id}(id=${type.id})}" th:text="${type.name}">思想与感悟</a>
+                    <div class="ui basic left pointing label" th:classappend="${type.id == activeTypeId} ? 'teal'" th:text="${#arrays.length(type.blogs)}">24</div>
                 </div>
             </div>
 
             <div class="ui teal top attached segment">
-                <div class="ui padded vertical segment m-padded-tb-large" >
-                    <div class="ui mobile reversed stackable grid">
+                <div class="ui padded vertical segment m-padded-tb-large" th:each="blog : ${page.content}">
+                    <div class="ui middle aligned mobile reversed stackable grid" >
                         <div class="eleven wide column">
-                            <h3 class="ui header">你真的理解什么是财富自由吗?</h3>
-                            <p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
-                            <div class="ui stackable grid">
+                            <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗?</a></h3>
+                            <p class="m-text" th:text="|${blog.description}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                            <div class="ui grid">
                                 <div class="eleven wide column">
-                                    <div class="ui horizontal link list mini">
+                                    <div class="ui mini horizontal link list">
                                         <div class="item">
-                                            <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">XGC</a></div>
+                                            <img src="https://unsplash.it/100/100?image=1005" th:src="@{${blog.user.avatar}}"  alt="" class="ui avatar image">
+                                            <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}" >李仁密</a></div>
                                         </div>
                                         <div class="item">
-                                            <i class="icon calendar"></i> 2020/3/29
+                                            <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2017-10-01</span>
                                         </div>
                                         <div class="item">
-                                            <i class="icon eye"></i> 2342
+                                            <i class="eye icon"></i> <span th:text="${blog.views}">2342</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
+                                <div class="right aligned five wide column">
+                                    <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.type.name}">认知升级</a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="five wide column">
-                            <a href="#" target="_blank">
-                                <img src="https://unsplash.it/800/450?image=1005" alt="" class="ui rounded image">
+                            <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
+                                <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.firstPicture}}"  alt="" class="ui rounded image">
                             </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui padded vertical segment m-padded-tb-large" >
-                    <div class="ui mobile reversed stackable grid">
-                        <div class="eleven wide column">
-                            <h3 class="ui header">你真的理解什么是财富自由吗?</h3>
-                            <p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
-                            <div class="ui stackable grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list mini">
-                                        <div class="item">
-                                            <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">XGC</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="icon calendar"></i> 2020/3/29
-                                        </div>
-                                        <div class="item">
-                                            <i class="icon eye"></i> 2342
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
-                                </div>
-                            </div>
                         </div>
 
-                        <div class="five wide column">
-                            <a href="#" target="_blank">
-                                <img src="https://unsplash.it/800/450?image=1005" alt="" class="ui rounded image">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui padded vertical segment m-padded-tb-large" >
-                    <div class="ui mobile reversed stackable grid">
-                        <div class="eleven wide column">
-                            <h3 class="ui header">你真的理解什么是财富自由吗?</h3>
-                            <p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
-                            <div class="ui stackable grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list mini">
-                                        <div class="item">
-                                            <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">XGC</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="icon calendar"></i> 2020/3/29
-                                        </div>
-                                        <div class="item">
-                                            <i class="icon eye"></i> 2342
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="five wide column">
-                            <a href="#" target="_blank">
-                                <img src="https://unsplash.it/800/450?image=1005" alt="" class="ui rounded image">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui padded vertical segment m-padded-tb-large" >
-                    <div class="ui mobile reversed stackable grid">
-                        <div class="eleven wide column">
-                            <h3 class="ui header">你真的理解什么是财富自由吗?</h3>
-                            <p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
-                            <div class="ui stackable grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list mini">
-                                        <div class="item">
-                                            <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">XGC</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="icon calendar"></i> 2020/3/29
-                                        </div>
-                                        <div class="item">
-                                            <i class="icon eye"></i> 2342
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="five wide column">
-                            <a href="#" target="_blank">
-                                <img src="https://unsplash.it/800/450?image=1005" alt="" class="ui rounded image">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="ui padded vertical segment m-padded-tb-large" >
-                    <div class="ui mobile reversed stackable grid">
-                        <div class="eleven wide column">
-                            <h3 class="ui header">你真的理解什么是财富自由吗?</h3>
-                            <p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
-                            <div class="ui stackable grid">
-                                <div class="eleven wide column">
-                                    <div class="ui horizontal link list mini">
-                                        <div class="item">
-                                            <img src="https://unsplash.it/100/100?image=1005" alt="" class="ui avatar image">
-                                            <div class="content"><a href="#" class="header">XGC</a></div>
-                                        </div>
-                                        <div class="item">
-                                            <i class="icon calendar"></i> 2020/3/29
-                                        </div>
-                                        <div class="item">
-                                            <i class="icon eye"></i> 2342
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="five wide column right aligned">
-                                    <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">认知升级</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="five wide column">
-                            <a href="#" target="_blank">
-                                <img src="https://unsplash.it/800/450?image=1005" alt="" class="ui rounded image">
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
 
             <!--footer-->
-            <div class="ui bottom attached segment">
+            <div class="ui bottom attached segment" th:if="${page.totalPages}>1">
                 <div class="ui middle aligned two column grid">
                     <div class="column">
-                        <a href="#" class="ui button teal basic mini">上一页</a>
+                        <a href="#" th:href="@{/(page=${page.number}-1)}"  th:unless="${page.first}" class="ui mini teal basic button">上一页</a>
                     </div>
                     <div class="right aligned column">
-                        <a href="#" class="ui button teal basic mini">下一页</a>
+                        <a href="#" th:href="@{/(page=${page.number}+1)}"  th:unless="${page.last}" class="ui mini teal basic button">下一页</a>
                     </div>
                 </div>
             </div>
@@ -292,7 +109,7 @@
     <br>
 
     <!-- 底部footer -->
-    <footer class="ui inverted segment vertical m-padded-tb-massive">
+    <footer th:replace="_fragments :: footer" class="ui inverted segment vertical m-padded-tb-massive">
         <div class="ui container center aligned">
             <div class="ui stackable grid divided inverted">
                 <div class="three wide column">
@@ -328,8 +145,11 @@
     </footer>
 </body>
 
+<!--/*/<th:block th:replace="_fragments :: script">/*/-->
 <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
+<!--/*/</th:block>/*/-->
+
 <script>
     $('.menu.toggle').click(function () {
         $('.m-item').toggleClass('m-mobile-hide');
